fixed spacing at the bottom on both pages

--- a/News/news-blood-blockade-battlefront.css
+++ b/News/news-blood-blockade-battlefront.css
@@ -458,7 +458,7 @@ body {
     flex-direction: column;
     top: 11400px;
     left: 15%;
-    bottom: 400px;
+    bottom: 500px;
   }
 }
 
